# MLP

src/: CMakeLists.txt  README.md  Weights.txt  bonus.md
src/Controllers/: CMakeLists.txt
src/Controllers/include/: Controller.h
src/Controllers/src/: Controller.cc
src/Models/: CMakeLists.txt
src/Models/include/ActivateFunction/: ActivateFunction.h
src/Models/include/BaseMLP/: BaseMLP.h
src/Models/include/Clocks/: Clocks.h
src/Models/include/DataStruct/: DataInput.h  DataNetwork.h
src/Models/include/GraphMLP/: GraphMLP.h  Layer.h  Neuron.h
src/Models/include/Logging/: Logging.h
src/Models/include/Matrix/: VecMatrix.h
src/Models/include/MatrixMLP/: MatrixMLP.h
src/Models/include/Parser/: ParseFile.h
src/Models/include/Perceptron/: Perceptron.h
src/Models/include/PerceptronSwitcher/: PerceptronSwitcher.h
src/Models/include/Random/: Random.h
src/Models/src/ActivateFunction/: ActivateFunction.cc
src/Models/src/Clocks/: Clocks.cc
src/Models/src/GraphMLP/: CMakeLists.txt  GraphMLP.cc  Layer.cc  Neuron.cc
src/Models/src/Logging/: Logging.cc
src/Models/src/Matrix/: VecMatrix.cc
src/Models/src/MatrixMLP/: MatrixMLP.cc
src/Models/src/Parser/: ParseFile.cc
src/Models/src/Perceptron/: Perceptron.cc
src/Models/src/PerceptronSwitcher/: PerceptronSwitcher.cc
src/Models/src/Random/: Random.cc
src/Tests/: CMakeLists.txt
src/Tests/TestFiles/: file1.csv  file2.csv
src/Tests/src/: school21_unitTest.cc
src/Views/: CMakeLists.txt  main.cc
src/Views/Ui/: configsettings.ui  drawingwidget.ui  graph.ui  mainwindow.ui
src/Views/include/ConfigSettings/: ConfigSettings.h
src/Views/include/Draw/: DrawingWidget.h
src/Views/include/Graph/: Graph.h
src/Views/include/MainWindow/: MainWindow.h  TempWindowFactory.h
src/Views/src/ConfigSettings/: ConfigSettings.cc
src/Views/src/Draw/: DrawingWidget.cc
src/Views/src/Graph/: Graph.cc
src/Views/src/MainWindow/: MainWindow.cc  TempWindowFactory.cc
